--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <link rel="apple-touch-icon" href="icon.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900" rel="stylesheet">
     <style>
+        :root {
+            --inhale: 1s;
+            --hold: 1s;
+            --exhale: 1s;
+            --pause: 1s;
+            --count: 6
+        }
         /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
         html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=reset],[type=submit],button,html [type=button]{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
         html {
@@ -26,12 +33,14 @@
         *, *:before, *:after { box-sizing: inherit; }
 
         .digital-lung {
-            animation-duration: 4s;
-            animation-name: breathe-in, hold, breathe-out;
-            animation-iteration-count: 1;
+            animation: 
+                inhale var(--inhale) normal 1,
+                hold var(--hold) normal var(--inhale) 1,
+                exhale var(--exhale) normal calc(var(--inhale) + var(--hold)) 1,
+                pause var(--pause) normal calc(var(--inhale) + var(--hold) + var(--exhale)) 1;
         }
 
-        @keyframes breathe-in {
+        @keyframes inhale {
             from {
                 color: yellow;
             }
@@ -49,12 +58,24 @@
             }
         }
 
-        @keyframes breathe-out {
+        @keyframes exhale {
             from {
                 color: orange;
             }
             to {
                 color: purple;
+            }
+        }
+
+        @keyframes pause {
+            0% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0.25;
+            }
+            100% {
+                opacity: 1;
             }
         }
   </style>
@@ -64,13 +85,23 @@
         <h1 id="watchMe" class="digital-lung">Watch Me</h1>
     </main>
     <script>
-        var el = document.getElementById("watchMe");
-        el.addEventListener("animationend", function(e) {
-            this.classList.remove("digital-lung");
-            // HACK
-            void el.offsetWidth;
-            this.classList.add("digital-lung");
+        const lung = document.getElementById("watchMe");
+        let counter = 0;
+
+        lung.addEventListener("animationend", function(e) {
+            if (e.animationName == "pause") {
+                counter++;
+                if (counter < 6) {
+                    this.classList.remove("digital-lung");
+                    void lung.offsetWidth; // HACK
+                    this.classList.add("digital-lung");
+                }
+                console.log(counter + ' done.');
+            }
         });
+        // Check it out ey?
+        // https://github.com/wesbos/JavaScript30/blob/master/03%20-%20CSS%20Variables/index-FINISHED.html
+
     </script>
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
